# Coffee_Bean_Smart_Doser

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  coffee_doser_main.c  idf_component.yml
main/hardware/: pca9685_driver.c  servo_driver.c  shared_i2c_bus.c  tb6612_driver.c
main/include/: coffee_doser_config.h  console_task.h  display_task.h  led_task.h  motor_control_task.h  nau7802_task.h  pca9685_driver.h  rotary_encoder_task.h  servo_driver.h  shared_i2c_bus.h  tb6612_driver.h
main/tasks/: console_task.c  display_task.c  led_task.c  motor_control_task.c  nau7802_task.c  rotary_encoder_task.c
